Fixed image overflow

--- a/components/product-form/fields/photo-field/photo-field.module.scss
+++ b/components/product-form/fields/photo-field/photo-field.module.scss
@@ -24,7 +24,7 @@
     aspect-ratio: 1;
     border-radius: 12px;
     background: var(--c-shade-1);
-    border: 1px dashed var(--c-shade-2);
+    border: 1px solid var(--c-shade-2);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,6 +36,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    overflow: hidden;
+    border-radius: inherit;
 }
 
 .deleteBtn {
